index file updated

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <html>
 <head>
 <title>Sangharsha | Portflio</title>
+<style>
+.info{
+	width:auto;
+	background-color:aqua;
+	font-family:"ubuntu",arial;
+}
+</style>
 </head>
 <body>
-<h1>Site Under Construction.</h1>
+<div class="info">
+<h2>Site Under Construction.</h1>
 Please Visit Later.
 Thank You.
+</div>
 </body>
 </html>
