index file updated

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <title>Sangharsha | Portflio</title>
 <style>
 .info{
-	width:auto;
 	background-color:aqua;
 	font-family:"ubuntu",arial;
+	text-align: center;
 }
 </style>
 </head>
