--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <title>Sangharsha | Portflio</title>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"> 
 <style>
+
+body{
+	background-color: #1b1b2f;
+}
 .info{
-	background-color:aqua;
+	background-color:#162447;
+	color: #e43f5a;
 	font-family:"ubuntu",arial;
 	text-align: center;
 }
@@ -12,8 +17,8 @@
 </head>
 <body>
 <div class="info">
-<h2>Site Under Construction.</h1>
-Please Visit Later.
+<h1>Site Under Construction.</h1>
+Please Visit Later.<br>
 Thank You.
 </div>
 </body>
