--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@ body{
 	background-color: #181a1b;
 }
 .info{
+	margin: 0 40%;
 	background-color:#162447;
 	color: #e43f5a;
 	font-family:"ubuntu",arial;
 	text-align: center;
 }
+
+@media (max-width: 1024px){
+.info{
+	margin: auto;
+	background-color:#162447;
+	color: #e43f5a;
+	font-family:"ubuntu",arial;
+	text-align: center;
+	font-size: 2.5rem;
+	}
+}
+
 </style>
 </head>
 <body>
