--- a/index.html
+++ b/index.html
@@ -2,32 +2,43 @@
 <head>
 <title>Sangharsha | Portflio</title>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"> 
+
 <style>
+	*{
+		margin: 0px;
+		padding: 0px;
+	}
 
 body{
 	background-color: #181a1b;
 }
 .info{
-	margin: 0 40%;
+	margin: 10% 40%;
+	padding: 30px;
 	background-color:#162447;
 	color: #e43f5a;
 	font-family:"ubuntu",arial;
 	text-align: center;
 }
 
-@media (max-width: 1024px){
+h1{
+	margin-bottom: 10px;
+}
+
+@media (max-width: 950px){
 .info{
-	margin: auto;
+	margin: 10% auto;
 	background-color:#162447;
 	color: #e43f5a;
 	font-family:"ubuntu",arial;
 	text-align: center;
-	font-size: 2.5rem;
+	font-size: 1.8rem;
 	}
-}
 
+}
 </style>
 </head>
+
 <body>
 <div class="info">
 <h1>Site Under Construction.</h1>
@@ -35,4 +46,5 @@ Please Visit Later.<br>
 Thank You.
 </div>
 </body>
+
 </html>
