--- a/index.html
+++ b/index.html
@@ -1,44 +1,33 @@
 <html>
 <head>
-<title>Sangharsha | Portflio</title>
+<title>Under Construction</title>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"> 
-
 <style>
-	*{
-		margin: 0px;
-		padding: 0px;
-	}
 
 body{
 	background-color: #181a1b;
 }
 .info{
-	margin: 10% 40%;
-	padding: 30px;
+	margin: 0 40%;
 	background-color:#162447;
 	color: #e43f5a;
 	font-family:"ubuntu",arial;
 	text-align: center;
 }
 
-h1{
-	margin-bottom: 10px;
-}
-
-@media (max-width: 950px){
+@media (max-width: 1024px){
 .info{
-	margin: 10% auto;
+	margin: auto;
 	background-color:#162447;
 	color: #e43f5a;
 	font-family:"ubuntu",arial;
 	text-align: center;
-	font-size: 1.8rem;
+	font-size: 2.5rem;
 	}
-
 }
+
 </style>
 </head>
-
 <body>
 <div class="info">
 <h1>Site Under Construction.</h1>
@@ -46,5 +35,4 @@ Please Visit Later.<br>
 Thank You.
 </div>
 </body>
-
 </html>
