--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <html>
+
 <head>
-<title>Under Construction</title>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"> 
-<style>
+	<title>Under Construction</title>
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
+	<style>
+		body {
+			font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+			background: #C33764;
+			/* fallback for old browsers */
+			background: -webkit-linear-gradient(to right, #1D2671, #C33764);
+			/* Chrome 10-25, Safari 5.1-6 */
+			background: linear-gradient(to right, #1D2671, #C33764);
+			/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-body{
-	background-color: #181a1b;
-}
-.info{
-	margin: 0 40%;
-	background-color:#162447;
-	color: #e43f5a;
-	font-family:"ubuntu",arial;
-	text-align: center;
-}
-
-@media (max-width: 1024px){
-.info{
-	margin: auto;
-	background-color:#162447;
-	color: #e43f5a;
-	font-family:"ubuntu",arial;
-	text-align: center;
-	font-size: 2.5rem;
-	}
-}
-
-</style>
+			color: #F6F9FF;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+	</style>
 </head>
+
 <body>
-<div class="info">
-<h1>Site Under Construction.</h1>
-Please Visit Later.<br>
-Thank You.
-</div>
+	<p>
+		<h1>Site Under Construction.</h1>
+		<br />
+		<h2>Please Visit Later.</h2>
+		<h3>Thank You.</h3>
+	</p>
+
+	<footer>&copy; Sangharsha Dahal</footer>
 </body>
+
 </html>
