--- a/index.html
+++ b/index.html
@@ -1,35 +1,19 @@
-<html>
-
-<head>
-	<title>Under Construction</title>
-	<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
-	<style>
-		body {
-			font-family: "Ubuntu", Arial, Helvetica, sans-serif;
-			background: #C33764;
-			/* fallback for old browsers */
-			background: -webkit-linear-gradient(to right, #1D2671, #C33764);
-			/* Chrome 10-25, Safari 5.1-6 */
-			background: linear-gradient(to right, #1D2671, #C33764);
-			/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-			color: #F6F9FF;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-		}
-	</style>
-</head>
-
-<body>
-	<p>
-		<h1>Site Under Construction.</h1>
-		<br />
-		<h2>Please Visit Later.</h2>
-		<h3>Thank You.</h3>
-	</p>
-
-	<footer>&copy; Sangharsha Dahal</footer>
-</body>
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <title>Welcome | Page Under Construction</title>
+    </head>
+    <body>
+        <div id="container">
+            <div class="content">
+                <h1>Site Under Construction.</h1>
+                <h2>Please Visit Later.</h2>
+                <h3>Thank You.</h3>
+            </div>
+            <footer>&copy; 2021 Sangharsha Dahal</footer>
+        </div>
+    </body>
 </html>
