added link and link style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
         <title>Welcome | Page Under Construction</title>
     </head>
+
     <body>
         <div id="container">
             <div class="content">
@@ -13,7 +14,24 @@
                 <h2>Please Visit Later.</h2>
                 <h3>Thank You.</h3>
             </div>
-            <footer>&copy; 2021 Sangharsha Dahal</footer>
+            <footer>
+                &copy; 2021
+                <span class="footer-link"
+                    ><a
+                        href="https://github.com/sanghaarsha?tab=repositories"
+                        target="_blank"
+                        >Sangharsha Dahal</a
+                    ></span
+                >
+                <br />
+                <span class="footer-link">
+                    <a
+                        href="mailto:admin@sangharshadahal.com.np"
+                        target="_blank"
+                        >admin@sangharshadahal.com.np</a
+                    >
+                </span>
+            </footer>
         </div>
     </body>
 </html>
