change public mailbox

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <br />
                 <span class="footer-link">
                     <a
-                        href="mailto:admin@sangharshadahal.com.np"
+                        href="mailto:contact@sangharshadahal.com.np"
                         target="_blank"
-                        >admin@sangharshadahal.com.np</a
+                        >contact@sangharshadahal.com.np</a
                     >
                 </span>
             </footer>
